lib/rule_engine/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> expression COMMENT
Rule 3     object -> object ATTR SYMBOL
Rule 4     object -> object ATTR_SAFE SYMBOL
Rule 5     expression -> object
Rule 6     expression -> expression QMARK expression COLON expression
Rule 7     expression -> expression COALESCE expression
Rule 8     expression -> expression MOD expression
Rule 9     expression -> expression MUL expression
Rule 10    expression -> expression FDIV expression
Rule 11    expression -> expression TDIV expression
Rule 12    expression -> expression POW expression
Rule 13    expression -> expression ADD expression
Rule 14    expression -> expression SUB expression
Rule 15    expression -> expression BWAND expression
Rule 16    expression -> expression BWOR expression
Rule 17    expression -> expression BWXOR expression
Rule 18    expression -> expression BWLSH expression
Rule 19    expression -> expression BWRSH expression
Rule 20    expression -> expression IN expression
Rule 21    expression -> expression NOT IN expression
Rule 22    expression -> expression EQ expression
Rule 23    expression -> expression NE expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression GE expression
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression LE expression
Rule 28    expression -> expression EQ_FZM expression
Rule 29    expression -> expression EQ_FZS expression
Rule 30    expression -> expression NE_FZM expression
Rule 31    expression -> expression NE_FZS expression
Rule 32    expression -> expression AND expression
Rule 33    expression -> expression OR expression
Rule 34    object -> LPAREN expression RPAREN
Rule 35    expression -> NOT expression
Rule 36    object -> SYMBOL
Rule 37    expression -> SUB expression
Rule 38    expression -> TRUE
Rule 39    expression -> FALSE
Rule 40    object -> BYTES
Rule 41    object -> DATETIME
Rule 42    object -> TIMEDELTA
Rule 43    expression -> FLOAT
Rule 44    expression -> FLOAT_NAN
Rule 45    expression -> FLOAT_INF
Rule 46    object -> NULL
Rule 47    object -> LBRACE ary_members RBRACE
Rule 48    object -> LBRACE ary_members COMMA RBRACE
Rule 49    object -> STRING
Rule 50    object -> LBRACKET RBRACKET
Rule 51    object -> LBRACKET ary_members RBRACKET
Rule 52    object -> LBRACKET ary_members COMMA RBRACKET
Rule 53    object -> LBRACKET expression FOR SYMBOL IN expression RBRACKET
Rule 54    object -> LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
Rule 55    ary_members -> expression
Rule 56    ary_members -> ary_members COMMA expression
Rule 57    object -> LBRACE RBRACE
Rule 58    object -> LBRACE map_members RBRACE
Rule 59    object -> LBRACE map_members COMMA RBRACE
Rule 60    map_member -> expression COLON expression
Rule 61    map_members -> map_member
Rule 62    map_members -> map_members COMMA map_member
Rule 63    object -> object LBRACKET expression RBRACKET
Rule 64    object -> object LBRACKET COLON RBRACKET
Rule 65    object -> object LBRACKET COLON expression RBRACKET
Rule 66    object -> object LBRACKET expression COLON RBRACKET
Rule 67    object -> object LBRACKET expression COLON expression RBRACKET
Rule 68    object -> expression LPAREN RPAREN
Rule 69    object -> expression LPAREN ary_members RPAREN

Terminals, with rules where they appear

ADD                  : 13
AND                  : 32
ATTR                 : 3
ATTR_SAFE            : 4
BWAND                : 15
BWLSH                : 18
BWOR                 : 16
BWRSH                : 19
BWXOR                : 17
BYTES                : 40
COALESCE             : 7
COLON                : 6 60 64 65 66 67
COMMA                : 48 52 56 59 62
COMMENT              : 2
DATETIME             : 41
EQ                   : 22
EQ_FZM               : 28
EQ_FZS               : 29
FALSE                : 39
FDIV                 : 10
FLOAT                : 43
FLOAT_INF            : 45
FLOAT_NAN            : 44
FOR                  : 53 54
GE                   : 25
GT                   : 24
IF                   : 54
IN                   : 20 21 53 54
LBRACE               : 47 48 57 58 59
LBRACKET             : 50 51 52 53 54 63 64 65 66 67
LE                   : 27
LPAREN               : 34 68 69
LT                   : 26
MOD                  : 8
MUL                  : 9
NE                   : 23
NE_FZM               : 30
NE_FZS               : 31
NOT                  : 21 35
NULL                 : 46
OR                   : 33
POW                  : 12
QMARK                : 6
RBRACE               : 47 48 57 58 59
RBRACKET             : 50 51 52 53 54 63 64 65 66 67
RPAREN               : 34 68 69
STRING               : 49
SUB                  : 14 37
SYMBOL               : 3 4 36 53 54
TDIV                 : 11
TIMEDELTA            : 42
TRUE                 : 38
error                : 

Nonterminals, with rules where they appear

ary_members          : 47 48 51 52 56 69
expression           : 1 2 6 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 37 53 53 54 54 54 55 56 60 60 63 65 66 67 67 68 69
map_member           : 61 62
map_members          : 58 59 62
object               : 3 4 5 63 64 65 66 67
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . expression COMMENT
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression COALESCE expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression FDIV expression
    (11) expression -> . expression TDIV expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression BWAND expression
    (16) expression -> . expression BWOR expression
    (17) expression -> . expression BWXOR expression
    (18) expression -> . expression BWLSH expression
    (19) expression -> . expression BWRSH expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression NOT IN expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ_FZM expression
    (29) expression -> . expression EQ_FZS expression
    (30) expression -> . expression NE_FZM expression
    (31) expression -> . expression NE_FZS expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (35) expression -> . NOT expression
    (37) expression -> . SUB expression
    (38) expression -> . TRUE
    (39) expression -> . FALSE
    (43) expression -> . FLOAT
    (44) expression -> . FLOAT_NAN
    (45) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (34) object -> . LPAREN expression RPAREN
    (36) object -> . SYMBOL
    (40) object -> . BYTES
    (41) object -> . DATETIME
    (42) object -> . TIMEDELTA
    (46) object -> . NULL
    (47) object -> . LBRACE ary_members RBRACE
    (48) object -> . LBRACE ary_members COMMA RBRACE
    (49) object -> . STRING
    (50) object -> . LBRACKET RBRACKET
    (51) object -> . LBRACKET ary_members RBRACKET
    (52) object -> . LBRACKET ary_members COMMA RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (54) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (57) object -> . LBRACE RBRACE
    (58) object -> . LBRACE map_members RBRACE
    (59) object -> . LBRACE map_members COMMA RBRACE
    (63) object -> . object LBRACKET expression RBRACKET
    (64) object -> . object LBRACKET COLON RBRACKET
    (65) object -> . object LBRACKET COLON expression RBRACKET
    (66) object -> . object LBRACKET expression COLON RBRACKET
    (67) object -> . object LBRACKET expression COLON expression RBRACKET
    (68) object -> . expression LPAREN RPAREN
    (69) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    object                         shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (2) statement -> expression . COMMENT
    (6) expression -> expression . QMARK expression COLON expression
    (7) expression -> expression . COALESCE expression
    (8) expression -> expression . MOD expression
    (9) expression -> expression . MUL expression
    (10) expression -> expression . FDIV expression
    (11) expression -> expression . TDIV expression
    (12) expression -> expression . POW expression
    (13) expression -> expression . ADD expression
    (14) expression -> expression . SUB expression
    (15) expression -> expression . BWAND expression
    (16) expression -> expression . BWOR expression
    (17) expression -> expression . BWXOR expression
    (18) expression -> expression . BWLSH expression
    (19) expression -> expression . BWRSH expression
    (20) expression -> expression . IN expression
    (21) expression -> expression . NOT IN expression
    (22) expression -> expression . EQ expression
    (23) expression -> expression . NE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ_FZM expression
    (29) expression -> expression . EQ_FZS expression
    (30) expression -> expression . NE_FZM expression
    (31) expression -> expression . NE_FZS expression
    (32) expression -> expression . AND expression
    (33) expression -> expression . OR expression
    (68) object -> expression . LPAREN RPAREN
    (69) object -> expression . LPAREN ary_members RPAREN

    $end            reduce using rule 1 (statement -> expression .)
    COMMENT         shift and go to state 20
    QMARK           shift and go to state 21
    COALESCE        shift and go to state 22
    MOD             shift and go to state 23
    MUL             shift and go to state 24
    FDIV            shift and go to state 25
    TDIV            shift and go to state 26
    POW             shift and go to state 27
    ADD             shift and go to state 28
    SUB             shift and go to state 29
    BWAND           shift and go to state 30
    BWOR            shift and go to state 31
    BWXOR           shift and go to state 32
    BWLSH           shift and go to state 33
    BWRSH           shift and go to state 34
    IN              shift and go to state 35
    NOT             shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    GT              shift and go to state 39
    GE              shift and go to state 40
    LT              shift and go to state 41
    LE              shift and go to state 42
    EQ_FZM          shift and go to state 43
    EQ_FZS          shift and go to state 44
    NE_FZM          shift and go to state 45
    NE_FZS          shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48
    LPAREN          shift and go to state 49


state 3

    (5) expression -> object .
    (3) object -> object . ATTR SYMBOL
    (4) object -> object . ATTR_SAFE SYMBOL
    (63) object -> object . LBRACKET expression RBRACKET
    (64) object -> object . LBRACKET COLON RBRACKET
    (65) object -> object . LBRACKET COLON expression RBRACKET
    (66) object -> object . LBRACKET expression COLON RBRACKET
    (67) object -> object . LBRACKET expression COLON expression RBRACKET

    COMMENT         reduce using rule 5 (expression -> object .)
    QMARK           reduce using rule 5 (expression -> object .)
    COALESCE        reduce using rule 5 (expression -> object .)
    MOD             reduce using rule 5 (expression -> object .)
    MUL             reduce using rule 5 (expression -> object .)
    FDIV            reduce using rule 5 (expression -> object .)
    TDIV            reduce using rule 5 (expression -> object .)
    POW             reduce using rule 5 (expression -> object .)
    ADD             reduce using rule 5 (expression -> object .)
    SUB             reduce using rule 5 (expression -> object .)
    BWAND           reduce using rule 5 (expression -> object .)
    BWOR            reduce using rule 5 (expression -> object .)
    BWXOR           reduce using rule 5 (expression -> object .)
    BWLSH           reduce using rule 5 (expression -> object .)
    BWRSH           reduce using rule 5 (expression -> object .)
    IN              reduce using rule 5 (expression -> object .)
    NOT             reduce using rule 5 (expression -> object .)
    EQ              reduce using rule 5 (expression -> object .)
    NE              reduce using rule 5 (expression -> object .)
    GT              reduce using rule 5 (expression -> object .)
    GE              reduce using rule 5 (expression -> object .)
    LT              reduce using rule 5 (expression -> object .)
    LE              reduce using rule 5 (expression -> object .)
    EQ_FZM          reduce using rule 5 (expression -> object .)
    EQ_FZS          reduce using rule 5 (expression -> object .)
    NE_FZM          reduce using rule 5 (expression -> object .)
    NE_FZS          reduce using rule 5 (expression -> object .)
    AND             reduce using rule 5 (expression -> object .)
    OR              reduce using rule 5 (expression -> object .)
    LPAREN          reduce using rule 5 (expression -> object .)
    $end            reduce using rule 5 (expression -> object .)
    RPAREN          reduce using rule 5 (expression -> object .)
    COLON           reduce using rule 5 (expression -> object .)
    RBRACE          reduce using rule 5 (expression -> object .)
    COMMA           reduce using rule 5 (expression -> object .)
    FOR             reduce using rule 5 (expression -> object .)
    RBRACKET        reduce using rule 5 (expression -> object .)
    IF              reduce using rule 5 (expression -> object .)
    ATTR            shift and go to state 50
    ATTR_SAFE       shift and go to state 51
    LBRACKET        shift and go to state 52


state 4

    (37) expression -> SUB . expression
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression COALESCE expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression FDIV expression
    (11) expression -> . expression TDIV expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression BWAND expression
    (16) expression -> . expression BWOR expression
    (17) expression -> . expression BWXOR expression
    (18) expression -> . expression BWLSH expression
    (19) expression -> . expression BWRSH expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression NOT IN expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ_FZM expression
    (29) expression -> . expression EQ_FZS expression
    (30) expression -> . expression NE_FZM expression
    (31) expression -> . expression NE_FZS expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (35) expression -> . NOT expression
    (37) expression -> . SUB expression
    (38) expression -> . TRUE
    (39) expression -> . FALSE
    (43) expression -> . FLOAT
    (44) expression -> . FLOAT_NAN
    (45) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (34) object -> . LPAREN expression RPAREN
    (36) object -> . SYMBOL
    (40) object -> . BYTES
    (41) object -> . DATETIME
    (42) object -> . TIMEDELTA
    (46) object -> . NULL
    (47) object -> . LBRACE ary_members RBRACE
    (48) object -> . LBRACE ary_members COMMA RBRACE
    (49) object -> . STRING
    (50) object -> . LBRACKET RBRACKET
    (51) object -> . LBRACKET ary_members RBRACKET
    (52) object -> . LBRACKET ary_members COMMA RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (54) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (57) object -> . LBRACE RBRACE
    (58) object -> . LBRACE map_members RBRACE
    (59) object -> . LBRACE map_members COMMA RBRACE
    (63) object -> . object LBRACKET expression RBRACKET
    (64) object -> . object LBRACKET COLON RBRACKET
    (65) object -> . object LBRACKET COLON expression RBRACKET
    (66) object -> . object LBRACKET expression COLON RBRACKET
    (67) object -> . object LBRACKET expression COLON expression RBRACKET
    (68) object -> . expression LPAREN RPAREN
    (69) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    expression                     shift and go to state 53
    object                         shift and go to state 3

state 5

    (35) expression -> NOT . expression
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression COALESCE expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression MUL expression
    (10) expression -> . expression FDIV expression
    (11) expression -> . expression TDIV expression
    (12) expression -> . expression POW expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression BWAND expression
    (16) expression -> . expression BWOR expression
    (17) expression -> . expression BWXOR expression
    (18) expression -> . expression BWLSH expression
    (19) expression -> . expression BWRSH expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression NOT IN expression
    (22) expression -> . expression EQ expression
    (23) expression -> . expression NE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ_FZM expression
    (29) expression -> . expression EQ_FZS expression
    (30) expression -> . expression NE_FZM expression
    (31) expression -> . expression NE_FZS expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (35) expression -> . NOT expression
    (37) expression -> . SUB expression
    (38) expression -> . TRUE
    (39) expression -> . FALSE
    (43) expression -> . FLOAT
    (44) expression -> . FLOAT_NAN
    (45) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (34) object -> . LPAREN expression RPAREN
    (36) object -> . SYMBOL
    (40) object -> . BYTES
    (41) object -> . DATETIME
    (42) object -> . TIMEDELTA
    (46) object -> . NULL
    (47) object -> . LBRACE ary_members RBRACE
    (48) object -> . LBRACE ary_members COMMA RBRACE
    (49) object -> . STRING
    (50) object -> . LBRACKET RBRACKET
    (51) object -> . LBRACKET ary_members RBRACKET
    (52) object -> . LBRACKET ary_members COMMA RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (54) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (57) object -> . LBRACE RBRACE
    (58) object -> . LBRACE map_members RBRACE
    (59) object -> . LBRACE map_members COMMA RBRACE
    (63) object -> . object LBRACKET expression RBRACKET
    (64) object -> . object LBRACKET COLON RBRACKET
    (65) object -> . object LBRACKET COLON expression RBRACKET
    (66) object -> . object LBRACKET expression COLON RBRACKET
    (67) object -> . object LBRACKET expression COLON expression RBRACKET
    (68) object -> . expression LPAREN RPAREN
    (69) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    expression                     shift and go to state 54
    object                         shift and go to state 3

state 6

    (38) expression -> TRUE .

    COMMENT         reduce using rule 38 (expression -> TRUE .)
    QMARK           reduce using rule 38 (expression -> TRUE .)
    COALESCE        reduce using rule 38 (expression -> TRUE .)
    MOD             reduce using rule 38 (expression -> TRUE .)
    MUL             reduce using rule 38 (expression -> TRUE .)
    FDIV            reduce using rule 38 (expression -> TRUE .)
    TDIV            reduce using rule 38 (expression -> TRUE .)
    POW             reduce using rule 38 (expression -> TRUE .)
    ADD             reduce using rule 38 (expression -> TRUE .)
    SUB             reduce using rule 38 (expression -> TRUE .)
    BWAND           reduce using rule 38 (expression -> TRUE .)
    BWOR            reduce using rule 38 (expression -> TRUE .)
    BWXOR           reduce using rule 38 (expression -> TRUE .)
    BWLSH           reduce using rule 38 (expression -> TRUE .)
    BWRSH           reduce using rule 38 (expression -> TRUE .)
    IN              reduce using rule 38 (expression -> TRUE .)
    NOT             reduce using rule 38 (expression -> TRUE .)
    EQ              reduce using rule 38 (expression -> TRUE .)
    NE              reduce using rule 38 (expression -> TRUE .)
    GT              reduce using rule 38 (expression -> TRUE .)
    GE              reduce using rule 38 (expression -> TRUE .)
    LT              reduce using rule 38 (expression -> TRUE .)
    LE              reduce using rule 38 (expression -> TRUE .)
    EQ_FZM          reduce using rule 38 (expression -> TRUE .)
    EQ_FZS          reduce using rule 38 (expression -> TRUE .)
    NE_FZM          reduce using rule 38 (expression -> TRUE .)
    NE_FZS          reduce using rule 38 (expression -> TRUE .)
    AND             reduce using rule 38 (expression -> TRUE .)
    OR              reduce using rule 38 (expression -> TRUE .)
    LPAREN          reduce using rule 38 (expression -> TRUE .)
    $end            reduce using rule 38 (expression -> TRUE .)
    RPAREN          reduce using rule 38 (expression -> TRUE .)
    COLON           reduce using rule 38 (expression -> TRUE .)
    RBRACE          reduce using rule 38 (expression -> TRUE .)
    COMMA           reduce using rule 38 (expression -> TRUE .)
    FOR             reduce using rule 38 (expression -> TRUE .)
    RBRACKET        reduce using rule 38 (expression -> TRUE .)
    IF              reduce using rule 38 (expression -> TRUE .)


state 7

    (39) expression -> FALSE .

    COMMENT         reduce using rule 39 (expression -> FALSE .)
    QMARK           reduce using rule 39 (expression -> FALSE .)
    COALESCE        reduce using rule 39 (expression -> FALSE .)
    MOD             reduce using rule 39 (expression -> FALSE .)
    MUL             reduce using rule 39 (expression -> FALSE .)
    FDIV            reduce using rule 39 (expression -> FALSE .)
    TDIV            reduce using rule 39 (expression -> FALSE .)
    POW             reduce using rule 39 (expression -> FALSE .)
    ADD             reduce using rule 39 (expression -> FALSE .)
    SUB             reduce using rule 39 (expression -> FALSE .)
    BWAND           reduce using rule 39 (expression -> FALSE .)
    BWOR            reduce using rule 39 (expression -> FALSE .)
    BWXOR           reduce using rule 39 (expression -> FALSE .)
    BWLSH           reduce using rule 39 (expression -> FALSE .)
    BWRSH           reduce using rule 39 (expression -> FALSE .)
    IN              reduce using rule 39 (expression -> FALSE .)
    NOT             reduce using rule 39 (expression -> FALSE .)
    EQ              reduce using rule 39 (expression -> FALSE .)
    NE              reduce using rule 39 (expression -> FALSE .)
    GT              reduce using rule 39 (expression -> FALSE .)
    GE              reduce using rule 39 (expression -> FALSE .)
    LT              reduce using rule 39 (expression -> FALSE .)
    LE              reduce using rule 39 (expression -> FALSE .)
    EQ_FZM          reduce using rule 39 (expression -> FALSE .)
    EQ_FZS          reduce using rule 39 (expression -> FALSE .)
    NE_FZM          reduce using rule 39 (expression -> FALSE .)
    NE_FZS          reduce using rule 39 (expression -> FALSE .)
    AND             reduce using rule 39 (expression -> FALSE .)
    OR              reduce using rule 39 (expression -> FALSE .)
    LPAREN          reduce using rule 39 (expression -> FALSE .)
    $end            reduce using rule 39 (expression -> FALSE .)
    RPAREN          reduce using rule 39 (expression -> FALSE .)
    COLON           reduce using rule 39 (expression -> FALSE .)
    RBRACE          reduce using rule 39 (expression -> FALSE .)
    COMMA           reduce using rule 39 (expression -> FALSE .)
    FOR             reduce using rule 39 (expression -> FALSE .)
    RBRACKET        reduce using rule 39 (expression -> FALSE .)
    IF              reduce using rule 39 (expression -> FALSE .)


state 8

    (43) expression -> FLOAT .

    COMMENT         reduce using rule 43 (expression -> FLOAT .)
    QMARK           reduce using rule 43 (expression -> FLOAT .)
    COALESCE        reduce using rule 43 (expression -> FLOAT .)
    MOD             reduce using rule 43 (expression -> FLOAT .)
    MUL             reduce using rule 43 (expression -> FLOAT .)
    FDIV            reduce using rule 43 (expression -> FLOAT .)
    TDIV            reduce using rule 43 (expression -> FLOAT .)
    POW             reduce using rule 43 (expression -> FLOAT .)
    ADD             reduce using rule 43 (expression -> FLOAT .)
    SUB             reduce using rule 43 (expression -> FLOAT .)
    BWAND           reduce using rule 43 (expression -> FLOAT .)
    BWOR            reduce using rule 43 (expression -> FLOAT .)
    BWXOR           reduce using rule 43 (expression -> FLOAT .)
    BWLSH           reduce using rule 43 (expression -> FLOAT .)
    BWRSH           reduce using rule 43 (expression -> FLOAT .)
    IN              reduce using rule 43 (expression -> FLOAT .)
    NOT             reduce using rule 43 (expression -> FLOAT .)
    EQ              reduce using rule 43 (expression -> FLOAT .)
    NE              reduce using rule 43 (expression -> FLOAT .)
    GT              reduce using rule 43 (expression -> FLOAT .)
    GE              reduce using rule 43 (expression -> FLOAT .)
    LT              reduce using rule 43 (expression -> FLOAT .)
    LE              reduce using rule 43 (expression -> FLOAT .)
    EQ_FZM          reduce using rule 43 (expression -> FLOAT .)
    EQ_FZS          reduce using rule 43 (expression -> FLOAT .)
    NE_FZM          reduce using rule 43 (expression -> FLOAT .)
    NE_FZS          reduce using rule 43 (expression -> FLOAT .)
    AND             reduce using rule 43 (expression -> FLOAT .)
    OR              reduce using rule 43 (expression -> FLOAT .)
    LPAREN          reduce using rule 43 (expression -> FLOAT .)
    $end            reduce using rule 43 (expression -> FLOAT .)
    RPAREN          reduce using rule 43 (expression -> FLOAT .)
    COLON           reduce using rule 43 (expression -> FLOAT .)
    RBRACE          reduce using rule 43 (expression -> FLOAT .)
    COMMA           reduce using rule 43 (expression -> FLOAT .)
    FOR             reduce using rule 43 (expression -> FLOAT .)
    RBRACKET        reduce using rule 43 (expression -> FLOAT .)
    IF              reduce using rule 43 (expression -> FLOAT .)


state 9

    (44) expression -> FLOAT_NAN .

    COMMENT         reduce using rule 44 (expression -> FLOAT_NAN .)
    QMARK           reduce using rule 44 (expression -> FLOAT_NAN .)
    COALESCE        reduce using rule 44 (expression -> FLOAT_NAN .)
    MOD             reduce using rule 44 (expression -> FLOAT_NAN .)
    MUL             reduce using rule 44 (expression -> FLOAT_NAN .)
    FDIV            reduce using rule 44 (expression -> FLOAT_NAN .)
    TDIV            reduce using rule 44 (expression -> FLOAT_NAN .)
    POW             reduce using rule 44 (expression -> FLOAT_NAN .)
    ADD             reduce using rule 44 (expression -> FLOAT_NAN .)
    SUB             reduce using rule 44 (expression -> FLOAT_NAN .)
    BWAND           reduce using rule 44 (expression -> FLOAT_NAN .)
    BWOR            reduce using rule 44 (expression -> FLOAT_NAN .)
    BWXOR           reduce using rule 44 (expression -> FLOAT_NAN .)
    BWLSH           reduce using rule 44 (expression -> FLOAT_NAN .)
    BWRSH           reduce using rule 44 (expression -> FLOAT_NAN .)
    IN              reduce using rule 44 (expression -> FLOAT_NAN .)
    NOT             reduce using rule 44 (expression -> FLOAT_NAN .)
    EQ              reduce using rule 44 (expression -> FLOAT_NAN .)
    NE              reduce using rule 44 (expression -> FLOAT_NAN .)
    GT              reduce using rule 44 (expression -> FLOAT_NAN .)
    GE              reduce using rule 44 (expression -> FLOAT_NAN .)
    LT              reduce using rule 44 (expression -> FLOAT_NAN .)
    LE              reduce using rule 44 (expression -> FLOAT_NAN .)
    EQ_FZM          reduce using rule 44 (expression -> FLOAT_NAN .)
    EQ_FZS          reduce using rule 44 (expression -> FLOAT_NAN .)
    NE_FZM          reduce using rule 44 (expression -> FLOAT_NAN .)
    NE_FZS          reduce using rule 44 (expression -> FLOAT_NAN .)
    AND             reduce using rule 44 (expression -> FLOAT_NAN .)
    OR              reduce using rule 44 (expression -> FLOAT_NAN .)
    LPAREN          reduce using rule 44 (expression -> FLOAT_NAN .)
    $end            reduce using rule 44 (expression -> FLOAT_NAN .)
    RPAREN          reduce using rule 44 (expression -> FLOAT_NAN .)
    COLON           reduce using rule 44 (expression -> FLOAT_NAN .)
    RBRACE          reduce using rule 44 (expression -> FLOAT_NAN .)
    COMMA           reduce using rule 44 (expression -> FLOAT_NAN .)
    FOR             reduce using rule 44 (expression -> FLOAT_NAN .)
    RBRACKET        reduce using rule 44 (expression -> FLOAT_NAN .)
    IF              reduce using rule 44 (expression -> FLOAT_NAN .)


state 10

    (45) expression -> FLOAT_INF .
